--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -7,9 +7,10 @@ vich_uploader:
       upload_destination: "%kernel.project_dir%/public/images/avatars"
       namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
 
-      inject_on_load: false
-      delete_on_update: true
-      delete_on_remove: true
+    cover_image:
+      uri_prefix: /images/cover-images
+      upload_destination: "%kernel.project_dir%/public/images/cover-images"
+      namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
 
   #mappings:
   #    products:
